# td-imagefx-library

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TD_ImageFX_Library.toe  THIRD_PARTY_NOTICES.md  pyproject.toml
.codex/: config.toml.example
.github/: CODEOWNERS
config/: update_sources.json
docs/: architecture.md  benchmark-data.json  benchmarks.md  effect-authoring-contract.md  embody-envoy-integration.md  gallery-baselines.json  gallery.json  gallery.md  native-validation.json  official-sources.md  roadmap-and-coverage.md  touchdesigner-setup.md  updater-security-version-locking.md
registry/: update-feed.json  update-feed.local.json
schemas/: active-state.schema.json  local-registry.schema.json  lockfile.schema.json  package-manifest.schema.json  update-feed.schema.json
tests/: helpers.py  test_archive_state.py  test_cli.py  test_compatibility_lockfile.py  test_credential_scan.py  test_embody_integration.py  test_feed.py  test_manifest_contract.py  test_manifest_registry.py  test_native_validation.py  test_rack_presets.py  test_release_hardening.py  test_repository_tools.py  test_semver.py  test_stateful_package_upgrades.py  test_touchdesigner_browser.py  test_touchdesigner_builder.py  test_touchdesigner_library.py  test_touchdesigner_rack.py  test_touchdesigner_shader_paths.py  test_touchdesigner_updater.py
tools/: benchmark_report.py  build_gallery.py  check_credentials.py  check_gallery.py  check_immutable_history.py  new_effect.py  package_release.py  record_native_validation.py  verify_repository.py
(+64 files in other folders)
